vehicle/tests/golden/error/scoping/recordFieldDuplicate/spec.vcl
record Test1 where
  { f1 : Real
  , f2 : Real
  }

record Test2 where
  { f1 : Real
  , f2 : Real
  }
